--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,8 +1,8 @@
 apply plugin: 'com.android.application'
 
 apply plugin: 'kotlin-android'
-
 apply plugin: 'kotlin-android-extensions'
+apply plugin: 'kotlin-kapt'
 
 android {
     compileSdkVersion 26
@@ -14,9 +14,13 @@ android {
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
+    dataBinding {
+        enabled = true
+    }
     buildTypes {
         debug {
-            buildConfigField 'String', 'BASE_URL', '"http://10.0.2.2:8000/api/"'
+            //buildConfigField 'String', 'BASE_URL', '"http://10.0.2.2:8000/api/"'
+            buildConfigField 'String', 'BASE_URL', '"http://192.168.0.33:8000/api/"'
         }
         release {
             minifyEnabled false
@@ -51,7 +55,10 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
     implementation 'com.squareup.retrofit2:converter-scalars:2.4.0'
     implementation 'com.google.code.gson:gson:2.8.5'
+    implementation 'android.arch.lifecycle:extensions:1.1.1'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+    annotationProcessor 'android.arch.lifecycle:compiler:1.1.1'
+    kapt 'com.android.databinding:compiler:3.1.4'
 }
