--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,7 +37,7 @@ android {
                             'src/main/res/layouts/home',
                             'src/main/res/layouts/navigation',
                             'src/main/res/layouts/noticias',
-                            'src/main/res/layouts/perfil_academico',
+                            'src/main/res/layouts/perfilacademico',
                             'src/main/res/layouts',
                             'src/main/res'
                     ]
@@ -56,6 +56,8 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-scalars:2.4.0'
     implementation 'com.google.code.gson:gson:2.8.5'
     implementation 'android.arch.lifecycle:extensions:1.1.1'
+    implementation 'com.android.support:support-v4:26.1.0'
+    implementation 'com.android.support:recyclerview-v7:26.1.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
