--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,6 +35,7 @@ android {
                     [
                             'src/main/res/layouts/auth',
                             'src/main/res/layouts/comunicados',
+                            'src/main/res/layouts/eventos',
                             'src/main/res/layouts/horarios',
                             'src/main/res/layouts/navigation',
                             'src/main/res/layouts/noticias',
@@ -64,6 +65,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-core:16.0.3'
     implementation 'com.google.firebase:firebase-messaging:17.3.0'
     implementation 'com.firebase:firebase-jobdispatcher:0.5.2'
+    implementation 'com.squareup.picasso:picasso:2.71828'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     kapt 'android.arch.lifecycle:compiler:1.1.1'
