--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,6 +34,7 @@ android {
             res.srcDirs =
                     [
                             'src/main/res/layouts/auth',
+                            'src/main/res/layouts/ayuda',
                             'src/main/res/layouts/clases_virtuales',
                             'src/main/res/layouts/comunicados',
                             'src/main/res/layouts/eventos',
